@@ -1,3 +1,5 @@
+[COLOR yellow][B]v1.2.2[/B][/COLOR]
+* Added dialog window when quick update starts.
 [COLOR yellow][B]v1.2.1[/B][/COLOR]
 * Now shows latest quick update notification number in Wizard settings.
 [COLOR yellow][B]v1.2.0[/B][/COLOR]
